// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-grid-view.vue pageNumber 变化 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" id="changelistbutton" tabindex="0" target="_self" vusion-slot-name-edit="text">
      变换list值
    </a>
  </div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <span vusion-slot-name="title">列表</span>
      <div>
      </div>
    </div>
    <div class="body">
      <div style="padding-top: 0px; padding-bottom: 0px;">
        <div class="root" index="0" style="width: 20%;" vusion-slot-name="item">JavaScript1
        </div>
        <div class="root" index="1" style="width: 20%;" vusion-slot-name="item">Jinja1
        </div>
        <div class="root" index="2" style="width: 20%;" vusion-slot-name="item">Jupyter1
        </div>
        <div class="root" index="3" style="width: 20%;" vusion-slot-name="item">Less1
        </div>
        <div class="root" index="4" style="width: 20%;" vusion-slot-name="item">Log1
        </div>
        <div class="root" index="5" style="width: 20%;" vusion-slot-name="item">Lua1
        </div>
        <div class="root" index="6" style="width: 20%;" vusion-slot-name="item">Makefile1
        </div>
        <div class="root" index="7" style="width: 20%;" vusion-slot-name="item">Markdown1
        </div>
        <div class="root" index="8" style="width: 20%;" vusion-slot-name="item">Objective-C1
        </div>
        <div class="root" index="9" style="width: 20%;" vusion-slot-name="item">Objective-C++1
        </div>
        <div class="root" index="10" style="width: 20%;" vusion-slot-name="item">PHP1
        </div>
        <div class="root" index="11" style="width: 20%;" vusion-slot-name="item">Perl1
        </div>
        <div class="root" index="12" style="width: 20%;" vusion-slot-name="item">PowerShell1
        </div>
        <div class="root" index="13" style="width: 20%;" vusion-slot-name="item">Properties1
        </div>
        <div class="root" index="14" style="width: 20%;" vusion-slot-name="item">Pug1
        </div>
        <div class="root" index="15" style="width: 20%;" vusion-slot-name="item">Python1
        </div>
        <div class="root" index="16" style="width: 20%;" vusion-slot-name="item">R1
        </div>
        <div class="root" index="17" style="width: 20%;" vusion-slot-name="item">Razor1
        </div>
        <div class="root" index="18" style="width: 20%;" vusion-slot-name="item">Ruby1
        </div>
        <div class="root" index="19" style="width: 20%;" vusion-slot-name="item">Rust1
        </div>
      </div>
    </div>
    <div class="foot">
      <nav class="root pagination" size="normal">
        <div class="root sizer" tabindex="0">
          <span>b</span>
          <span style="display: none;">请选择</span>
          <div class style="direction: ltr;" tags-overflow="collapse">
            20条/页
          </div>
          <transition-stub name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  10条/页
                </div>
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  20条/页
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  50条/页
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <a class="item-wrap">
          <i class="item" role="prev"></i>
        </a>
        <a class="item">1</a>
        <a class="item" selected="selected">2</a>
        <a class="item">3</a>
        <a class="item-wrap">
          <i class="item" role="next"></i>
        </a>
      </nav>
    </div>
  </div>
</div>
`;

exports[`u-grid-view.vue pageNumber 变化 2`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" id="changelistbutton" tabindex="0" target="_self" vusion-slot-name-edit="text">
      变换list值
    </a>
  </div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <span vusion-slot-name="title">列表</span>
      <div>
      </div>
    </div>
    <div class="body">
      <div style="padding-top: 0px; padding-bottom: 0px;">
        <div class="root" index="0" style="width: 20%;" vusion-slot-name="item">Batch12
        </div>
        <div class="root" index="1" style="width: 20%;" vusion-slot-name="item">C12
        </div>
        <div class="root" index="2" style="width: 20%;" vusion-slot-name="item">C#12
        </div>
        <div class="root" index="3" selected="selected" style="width: 20%;" vusion-slot-name="item">C++12
        </div>
        <div class="root" index="4" style="width: 20%;" vusion-slot-name="item">CSS12
        </div>
        <div class="root" index="5" style="width: 20%;" vusion-slot-name="item">Clojure12
        </div>
        <div class="root" index="6" style="width: 20%;" vusion-slot-name="item">CoffeeScript12
        </div>
        <div class="root" index="7" style="width: 20%;" vusion-slot-name="item">Coq12
        </div>
        <div class="root" index="8" style="width: 20%;" vusion-slot-name="item">Diff12
        </div>
        <div class="root" index="9" style="width: 20%;" vusion-slot-name="item">Dockerfile12
        </div>
        <div class="root" index="10" style="width: 20%;" vusion-slot-name="item">F#12
        </div>
        <div class="root" index="11" style="width: 20%;" vusion-slot-name="item">Go12
        </div>
        <div class="root" index="12" style="width: 20%;" vusion-slot-name="item">Groovy12
        </div>
        <div class="root" index="13" style="width: 20%;" vusion-slot-name="item">HLSL12
        </div>
        <div class="root" index="14" style="width: 20%;" vusion-slot-name="item">HTML12
        </div>
        <div class="root" index="15" style="width: 20%;" vusion-slot-name="item">Handlebars12
        </div>
        <div class="root" index="16" style="width: 20%;" vusion-slot-name="item">Ignore12
        </div>
        <div class="root" index="17" style="width: 20%;" vusion-slot-name="item">Ini12
        </div>
        <div class="root" index="18" style="width: 20%;" vusion-slot-name="item">JSON12
        </div>
        <div class="root" index="19" style="width: 20%;" vusion-slot-name="item">Java12
        </div>
      </div>
    </div>
    <div class="foot">
      <nav class="root pagination" size="normal">
        <div class="root sizer" tabindex="0">
          <span>b</span>
          <span style="display: none;">请选择</span>
          <div class style="direction: ltr;" tags-overflow="collapse">
            20条/页
          </div>
          <transition-stub name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  10条/页
                </div>
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  20条/页
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  50条/页
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <a class="item-wrap" disabled="disabled">
          <i class="item" role="prev"></i>
        </a>
        <a class="item" selected="selected">1</a>
        <a class="item">2</a>
        <a class="item">3</a>
        <a class="item-wrap">
          <i class="item" role="next"></i>
        </a>
      </nav>
    </div>
  </div>
</div>
`;

exports[`u-grid-view.vue pageNumber 变化 3`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" id="changelistbutton" tabindex="0" target="_self" vusion-slot-name-edit="text">
      变换list值
    </a>
  </div>
  <div border="true" class="root" tabindex="0">
    <div style="display: none;">
      <span vusion-slot-name="title">列表</span>
      <div>
      </div>
    </div>
    <div class="body">
      <div style="padding-top: 0px; padding-bottom: 0px;">
        <div class="root" index="0" style="width: 20%;" vusion-slot-name="item">SCSS12
        </div>
        <div class="root" index="1" style="width: 20%;" vusion-slot-name="item">SQL12
        </div>
        <div class="root" index="2" style="width: 20%;" vusion-slot-name="item">SVG12
        </div>
        <div class="root" index="3" style="width: 20%;" vusion-slot-name="item">Shaderlab12
        </div>
        <div class="root" index="4" style="width: 20%;" vusion-slot-name="item">Shell Script12
        </div>
        <div class="root" index="5" style="width: 20%;" vusion-slot-name="item">Swift12
        </div>
        <div class="root" index="6" style="width: 20%;" vusion-slot-name="item">TypeScript12
        </div>
        <div class="root" index="7" style="width: 20%;" vusion-slot-name="item">Visual Basic12
        </div>
        <div class="root" index="8" style="width: 20%;" vusion-slot-name="item">Vue12
        </div>
        <div class="root" index="9" style="width: 20%;" vusion-slot-name="item">XML12
        </div>
        <div class="root" index="10" style="width: 20%;" vusion-slot-name="item">XSL12
        </div>
        <div class="root" index="11" style="width: 20%;" vusion-slot-name="item">YAML12
        </div>
      </div>
    </div>
    <div class="foot">
      <nav class="root pagination" size="normal">
        <div class="root sizer" tabindex="0">
          <span>b</span>
          <span style="display: none;">请选择</span>
          <div class style="direction: ltr;" tags-overflow="collapse">
            20条/页
          </div>
          <transition-stub name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  10条/页
                </div>
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  20条/页
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  50条/页
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <a class="item-wrap">
          <i class="item" role="prev"></i>
        </a>
        <a class="item">1</a>
        <a class="item">2</a>
        <a class="item" selected="selected">3</a>
        <a class="item-wrap" disabled="disabled">
          <i class="item" role="next"></i>
        </a>
      </nav>
    </div>
  </div>
</div>
`;
